objects/Hardware_Purchase_Request_Settings__mdt/Hardware_Purchase_Request_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Manage settings for the Hardware Purchase Request process.</description>
    <label>Hardware Purchase Request Setting</label>
    <pluralLabel>Hardware Purchase Request Settings</pluralLabel>
</CustomObject>