objects/Hardware_Purchase_Request_Settings__mdt/fields/Disclaimer_Terms__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Terms__c</fullName>
    <description>Store disclaimer terms so that users can update without having to change the automation logic.</description>
    <label>Disclaimer Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>