objects/Hardware_Purchase_Request_Settings__mdt/fields/Product_Usage_Missing__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Missing__c</fullName>
    <description>Error message to display when Product Usage is null in the disclaimers screen</description>
    <label>Product Usage Missing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>