objects/Hardware_Purchase_Request_Settings__mdt/fields/Your_Name_Missing__c.field-meta.xml
<CustomField>
    <fullName>Your_Name_Missing__c</fullName>
    <description>Error message text to display when the user doesn&apos;t enter their name in the disclaimer screen.</description>
    <label>Your Name Missing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>